<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>launch_simple_test_helpers</name>
  <version>0.0.1</version>
  <description>Launch files and nodes needed to test launch_simple.</description>
  <maintainer email="lionel.gulich@gmail.com">Lionel Gulich</maintainer>
  <license>TBD</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
